--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <body class="bg-gray-100 h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://kit.fontawesome.com/e8d7aa0d87.js" crossorigin="anonymous"></script>
   </body>
 </html>
