--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/403890.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Crea y administra base de datos de pacientes ingresados en el formulario">
+    <meta name="keywords" content="Citas Veterinaria">
+    <meta name="author" content="Carlos Prado">
     <title>Citas Veterinarias</title>
     <link
     rel="stylesheet"
